Closed
Bug 1576453
Opened 6 years ago
Closed 6 years ago
Bustage on ActorsParent.cpp when Gecko 70 merges to Beta on 2019-08-26
Categories
(Core :: Storage: Quota Manager, defect, P1)
Core
Storage: Quota Manager
Tracking
()
VERIFIED
FIXED
mozilla70
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | ? | verified |
People
(Reporter: NarcisB, Assigned: janv)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[Tracking Requested - why for this release]:
Log link: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=263380952&repo=try&lineNumber=32484
:jvarga , this is regressed by Bug 1563023.
Can you please take a look?
Flags: needinfo?(jvarga)
| Assignee | ||
Comment 1•6 years ago
|
||
Looking
| Assignee | ||
Comment 2•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → jvarga
Status: NEW → ASSIGNED
Flags: needinfo?(jvarga)
Priority: -- → P1
Pushed by jvarga@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/045217bb0476
Fix a problem with unused variable in non-nightly builds; r=asuth
Comment 4•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70
Comment 5•6 years ago
|
||
Verified with the latest beta-sim: https://treeherder.mozilla.org/#/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Crunnable&revision=96b1ef962641a70f9b12a259f83d06e84485a5ac
No more occurrences.
Status: RESOLVED → VERIFIED
Updated•6 years ago
|
Updated•6 years ago
|
Keywords: regression
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•