Bug 1576453 - Fix a problem with unused variable in non-nightly builds; r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D43357